
0.3.0
features:
 * now you can run using internal files for independents variables, defining as 
   "default" in "file_I" section inside stations list file.
 * enable run with particular independent variable file

bugfixes:
 * bugfix the size data when set particular common period
 * bugfix when the common period defined is minor of 3 years
 * fix TYPOS

0.2.1
 * change name function and filename results of Arithmetic Mean Trim to mean_trim


0.2.0

features:
 * change numeration version
 * applied some PEP8 rules, fix typos and reorganize code
 * aplied color text in console information for errors, warnings and process 
 * final message with number of stations processed when Jaziku has finished
 * new argument input "-l" language selector, e.g. "-l es" 
 * show in terminal the run configuration
 * changes filename outputs for the results and some text inside files/graphics

bugfixes:
 * fix "Segmentation fault" in plt.close() using pyplot
 * show and info error when found wrong line or garbage character in input files
 * fix crash when the name or number from files (station list and files 
   variables input) contain spaces or tabs at the start or/and final of this.
 * fix memory leak using pyplot library    
 * fix several strings messages, correct to translate after install, translation
   works now.
 